--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "node-fetch": "^2.6.0",
     "ts-node": "^8.6.2",
     "tsoa": "^2.5.13",
     "typescript": "^3.8.3",
@@ -24,6 +26,7 @@
     "@types/express": "^4.17.3",
     "@types/mysql": "^2.15.9",
     "@types/node": "^13.9.1",
+    "@types/node-fetch": "^2.5.6",
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
   }
