Episode 8 - Putting it all together

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,6 +11,7 @@
 		"moduleResolution": "Node",
 		"sourceMap": true,
 		"experimentalDecorators": true,
+		"outDir": "dist",
 		"lib": [
 			"ES2017",
 		],
