--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint --fix",
+    "dist": "ng build --configuration production",
     "e2e": "ng e2e"
   },
   "private": true,
