--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon -V -w src -e ts -i src/routes.ts -x npm run server",
     "server": "npm run build:routes && node --inspect --require ts-node/register ./src/server.ts",
     "dev": "concurrently \"cd ../client && npm run start\" \"npm run start\"",
+    "dist": "shx rm -Rf ./dist && npm run build:routes && tsc && cp ./package.json ./dist && cd ./dist && npm i --production",
     "build:routes": "tsoa routes"
   },
   "author": "",
@@ -28,6 +29,7 @@
     "@types/node": "^13.9.1",
     "@types/node-fetch": "^2.5.6",
     "concurrently": "^5.1.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "shx": "^0.3.2"
   }
 }
